--- a/index.html
+++ b/index.html
@@ -9,10 +9,30 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container row">
         <div class="box">Box 1</div>
         <div class="box">Box 2</div>
         <div class="box">Box 3</div>
+    </div>
+
+    <div class="container column">
+        <div class="box">Box 4</div>
+        <div class="box">Box 5</div>
+        <div class="box">Box 6</div>
+    </div>
+
+    <div class="container wrap">
+        <div class="box">Box 7</div>
+        <div class="box">Box 8</div>
+        <div class="box">Box 9</div>
+        <div class="box">Box 10</div>
+        <div class="box">Box 11</div>
+    </div>
+
+    <div class="container align-items">
+        <div class="box align-start">Align Start</div>
+        <div class="box align-center">Align Center</div>
+        <div class="box align-end">Align End</div>
     </div>
 </body>
 
